force-app/main/default/objects/AWS_Integeration_Log__c/AWS_Integeration_Log__c.object-meta.xml
<CustomObject>
    <label>AWS Integration Log</label>
    <nameField>
        <displayFormat>AWSLOG-{YY}{MM}{DD}-{0000000000}</displayFormat>
        <label>AWS Integeration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Integration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>