force-app/main/default/objects/AWS_Integeration_Log__c/fields/AWS_File__c.field-meta.xml
<CustomField>
    <fullName>AWS_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS File</label>
    <referenceTo>AWS_File__c</referenceTo>
    <relationshipLabel>AWS Integration Log</relationshipLabel>
    <relationshipName>AWS_Integration_Log</relationshipName>
    <type>Lookup</type>
</CustomField>