force-app/main/default/objects/AWS_Integeration_Log__c/fields/Content_Deleted_from_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Content_Deleted_from_SFDC__c</fullName>
    <label>Content Deleted from SFDC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>