force-app/main/default/objects/AWS_Integeration_Log__c/fields/Database_Error__c.field-meta.xml
<CustomField>
    <fullName>Database_Error__c</fullName>
    <label>Database Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>