force-app/main/default/objects/AWS_Integeration_Log__c/fields/File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Uploaded?</label>
    <type>Checkbox</type>
</CustomField>