force-app/main/default/objects/AWS_Integeration_Log__c/fields/Logical_Link_Created__c.field-meta.xml
<CustomField>
    <fullName>Logical_Link_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logical Link Created?</label>
    <type>Checkbox</type>
</CustomField>