force-app/main/default/objects/AWS_Integeration_Log__c/fields/Other_Errors__c.field-meta.xml
<CustomField>
    <fullName>Other_Errors__c</fullName>
    <label>Other Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>