force-app/main/default/objects/AWS_Integeration_Log__c/fields/SFDC_File_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_File_ID__c</fullName>
    <label>SFDC File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>