force-app/main/default/objects/AWS_Integeration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Uploaded__c</columns>
    <columns>Logical_Link_Created__c</columns>
    <columns>Content_Deleted_from_SFDC__c</columns>
    <columns>Integration_Error__c</columns>
    <columns>Database_Error__c</columns>
    <columns>Other_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>